# twitter-system

./: .gitignore  benchmark_result.md  main.py  pyproject.toml  readme.md
app/: __init__.py  worker.py
app/api/: __init__.py  deps.py  router.py
app/api/routes/: __init__.py  follows.py  interactions.py  timeline.py  tweets.py  users.py
app/core/: __init__.py  config.py  rate_limit.py
app/db/: __init__.py  database.py  redis_client.py
app/models/: __init__.py  comment.py  feed.py  follow.py  like.py  tweet.py  user.py
app/repositories/: __init__.py  engagement_repository.py  feed_repository.py  follow_repository.py  tweet_repository.py  user_repository.py
app/schemas/: __init__.py  comment.py  follow.py  tweet.py  user.py
app/services/: __init__.py  timeline_service.py
scripts/: benchmark_celebrity_fanout.py  result.md  seed_performance_data.py
tests/: test_timeline_service.py
